--- a/index.html
+++ b/index.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.css"
-    />
   </head>
   <body>
+    <div class="heading">
+      <h1>My Movies</h1>
+      <form id="movie-form">
+        <label for="title">Title</label>
+        <input type="text" id="title" />
+        <label for="rating">Rating</label>
+        <input type="number" required min="0" max="10" id="rating" />
+        <button type="submit">Submit</button>
+      </form>
+    </div>
+    <br />
+    <table class="table">
+      <thead class="thead">
+        <tr>
+          <th scope="col" id="table-title">Title</th>
+          <th scope="col" id="table-rating">Rating</th>
+          <th scope="col">Delete</th>
+        </tr>
+      </thead>
+      <tbody id="movie-table-body"></tbody>
+    </table>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.js"
       integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
